--- a/.config
+++ b/.config
@@ -94,6 +94,7 @@ CONFIG_DEFAULT_kmod-fs-vfat=y
 CONFIG_DEFAULT_kmod-i40e=y
 CONFIG_DEFAULT_kmod-i40evf=y
 CONFIG_DEFAULT_kmod-iavf=y
+CONFIG_DEFAULT_kmod-igb=y
 CONFIG_DEFAULT_kmod-igb-intel=y
 CONFIG_DEFAULT_kmod-igb-intelvf=y
 CONFIG_DEFAULT_kmod-igc=y
